# Suga_Embed

./: .gitignore  pyproject.toml
preprocess/: get_seq_embedding.py
scripts/: create_seqdf.sh  get_emb_rinalmo.sh  get_emb_rnafm.sh  get_rf_feature.sh  run_train_example.sh  train_cl.sh  train_sv.sh
scripts/logs/: get_emb_rinalmo.err  get_emb_rnafm.err  train_sv.err
