[tool.poetry]
name = "UTR_PairPred"
version = "1.0.0"
description = "Original dir of Deciphering the comprehensive relationship between 5'UTR and 3'UTR sequence with deep learning"
authors = ["Kanta Suga"]
package-mode = false
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0"
biomart = "*"
biopython="*"
matplotlib = "*"
multimolecule = "*"
numpy = "1.26.4"
omegaconf = "*"
pandas = "*"
pyensembl="*"
scikit-learn= "*"
seaborn = "*"
statannotations="*"
torch = {version="2.2.0",source='torch_cu121'}
torchvision = {version='0.17.0',source='torch_cu121'}
tqdm = "*"
ViennaRNA="*"
wandb = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
jupyterlab = "*"

[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120


[tool.ruff.lint]
# All rules are listed on https://docs.astral.sh/ruff/rules/
select = [
	"E",  # pycodestyle errors
	"W",  # pycodestyle warnings
	"F",  # pyflakes
	"I",  # isort
	"C",  # flake8-comprehensions
	"B",  # flake8-bugbear
	"UP", # pyupgrade
]


[tool.ruff.format]
quote-style = "single"
